--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -826,7 +826,7 @@ RSVP form
         left: 30px;
         transform: translateY(-50%);
       }
-      i.fa-user, i.fa-users, i.fa-envelope, .fa-key {
+      i.fa {
         font-size: 14px;
         position: absolute;
         top: 50%;
@@ -853,6 +853,16 @@ RSVP form
       }
       input:-ms-input-placeholder {
         color: $form-placeholder;
+      }
+      select {
+        background-color: white;
+        margin-left: 60px;
+        width: 75%;
+        height: 100%;
+        -moz-border-radius: 6px;
+        -webkit-border-radius: 6px;
+        border-radius: 6px;
+        border: none;
       }
     }
   }
