--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -283,16 +283,17 @@ Hero
     margin-bottom: 80px;
   }
   .hero-content {
-    padding-top: 40%;
+    padding-top: 27%;
   }
   .hero-content img {
     width: 55%;
-    margin-bottom: 12%;
+    margin-bottom: 5%;
   }
 }
 .navigation {
   transition: all 300ms ease-in-out;
   position: fixed;
+  background-color: rgba(55, 36, 40, .38);
   width: 100%;
   z-index: 999;
 }
@@ -303,7 +304,7 @@ Hero
   width: 100%;
 }
 header {
-  padding: 50px 0;
+  padding: 20px 0;
   border-bottom: solid 1px rgba(255, 255, 255, 0.2);
   position: relative;
   width: 1170px;
@@ -364,7 +365,7 @@ header {
   .member-actions {
     position: absolute;
     right: 0;
-    top: 41px;
+    top: 26px;
     transition: all 300ms ease-in-out;
   }
 }
@@ -796,6 +797,7 @@ RSVP form
   padding-bottom: 140px;
   .rsvp-form {
     .rsvp-btn {
+      margin-top: -30px;
       padding: 15px 0;
       border-radius: 3px;
       width: 100%;
