--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -11,9 +11,9 @@ $txt-accent: #ACB1B4;
 $form-placeholder: #BCC1C3;
 // form placeholder text
 // Global colours
-$accent-color: #e8ca6f;
+$accent-color: rgb(99, 146, 163);
 // global accent colour
-$accent-color-hover: #d3b56a;
+$accent-color-hover: rgb(41, 93, 112);
 // global accent colour hover
 $white-color: #fff;
 $black-color: #000;
