--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -239,12 +239,18 @@ Navigation
   transform: translatey(-10px) rotate(-45deg)
 }
 .navicon {
-  position: absolute;
+  position: fixed;
   height: 26px;
   right: 10px;
   top: 34px;
   visibility: hidden;
   transition: all 300ms ease-in-out;
+}
+
+@media screen and (max-width: 991px) {
+  .navicon {
+    visibility: visible
+  }
 }
 
 /* ==========================================================================
@@ -382,6 +388,7 @@ header {
     }
   }
   .header-nav {
+    z-index: 0;
     display: inline-block;
   }
   .member-actions {
@@ -926,6 +933,13 @@ footer {
     font-size: 18px;
     margin: 0 2px;
   }
+}
+
+.shadowed {
+  -webkit-filter: drop-shadow(0px 0px 25px rgba(255,255 255,0.5));
+  filter: url(#drop-shadow);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=0, OffY=0, Color='#444')";
+  filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=0, OffY=0, Color='#444')";
 }
 
 /* ==========================================================================
