--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -936,7 +936,7 @@ footer {
 }
 
 .shadowed {
-  -webkit-filter: drop-shadow(0px 0px 25px rgba(255,255 255,0.5));
+  -webkit-filter: drop-shadow(0px 0px 25px rgba(255,255, 255,0.5));
   filter: url(#drop-shadow);
   -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=0, OffY=0, Color='#444')";
   filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=0, OffY=0, Color='#444')";
