--- a/graph/style.css
+++ b/graph/style.css
@@ -3,7 +3,10 @@ body {
     height: 100%;
 }
 
-#thegraph {
-    width: 100%;
-    height: 100%;
-}
+#graph-container {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: absolute;
+  }
