--- a/graph/style.css
+++ b/graph/style.css
@@ -1,15 +1,12 @@
 body {
     margin: 0;
-    height: 100%;
+    height: 100vh;
 }
 
-#graph-container {
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    position: absolute;
-  }
+#thegraph {
+    height: 100%;
+    width: 100%;
+}
 
 #centerdiv {
     position: absolute;
